--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container hero-content">
       <h1 class="hero-title">Eleve Sua Saúde e Performance</h1>
       <p class="hero-subtitle">
-        Emagrecimento • Reposição de Testosterona • Otimização Esportiva
+        Emagrecimento • Reposição Hormonal • Otimização Esportiva
       </p>
       <a href="#contato" class="btn-primary hero-cta">Agendar Consulta</a>
     </div>
