--- a/index.html
+++ b/index.html
@@ -33,36 +33,38 @@
   </header>
 
   <!-- HERO -->
-  <section class="hero animate-on-scroll" id="hero">
+  <section class="hero fade-up" id="hero">
     <div class="container hero-content">
       <h1 class="hero-title">Eleve Sua Saúde e Performance</h1>
       <p class="hero-subtitle">
-        Emagrecimento • Reposição Hormonal • Otimização Esportiva
+        Emagrecimento • Terapia de Reposição Hormonal • Otimização Esportiva
       </p>
       <a href="#contato" class="btn-primary hero-cta">Agendar Consulta</a>
     </div>
   </section>
 
   <!-- SEÇÃO SOBRE -->
-  <section class="sobre animate-on-scroll" id="sobre">
-    <div class="container">
-      <h2>Sobre Mim</h2>
-      <p class="descricao">
-        Sou médico especializado em protocolos avançados de emagrecimento, 
-        reposição de testosterona e melhora esportiva. Minha abordagem é 
-        altamente personalizada, fundamentada em evidências científicas 
-        e nas melhores práticas clínicas.
-      </p>
-      <p class="descricao">
-        Em constante evolução, estou em preparação para o 
-        <strong>USMLE</strong>, reforçando meu compromisso com a excelência 
-        na prática médica e com resultados reais para meus pacientes.
-      </p>
+  <section class="sobre fade-left" id="sobre">
+    <div class="container sobre-flex">
+      <div class="sobre-text">
+        <h2>Sobre Mim</h2>
+        <p class="descricao">
+          Sou médico especializado em protocolos avançados de emagrecimento, 
+          terapia de reposição hormonal e melhora esportiva. Minha abordagem é 
+          altamente personalizada, fundamentada em evidências científicas 
+          e nas melhores práticas clínicas.
+        </p>
+        <p class="descricao">
+          Em constante evolução, estou em preparação para o 
+          <strong>USMLE</strong>, reforçando meu compromisso com a excelência 
+          na prática médica e com resultados reais para meus pacientes.
+        </p>
+      </div>
     </div>
   </section>
 
   <!-- SEÇÃO SERVIÇOS -->
-  <section class="servicos animate-on-scroll" id="servicos">
+  <section class="servicos fade-right" id="servicos">
     <div class="container">
       <h2>Serviços</h2>
       <div class="cards">
@@ -74,10 +76,10 @@
           </p>
         </div>
         <div class="card">
-          <h3>Reposição Hormonal</h3>
+          <h3>Terapia de Reposição Hormonal</h3>
           <p>
-            Protocolos individualizados de reposição de testosterona, 
-            visando equilíbrio, vitalidade e bem-estar.
+            Protocolos individualizados para equilibrar níveis hormonais, 
+            melhorar vitalidade e bem-estar de forma segura.
           </p>
         </div>
         <div class="card">
@@ -92,14 +94,14 @@
   </section>
 
   <!-- SEÇÃO CONTATO -->
-  <section class="contato animate-on-scroll" id="contato">
+  <section class="contato fade-up" id="contato">
     <div class="container">
       <h2>Contato</h2>
       <p class="descricao">
         Agende sua consulta ou tire dúvidas diretamente comigo:
       </p>
       <div class="contact-links">
-        <!-- Ajuste seu número de WhatsApp -->
+        <!-- Ajuste seu número de WhatsApp se necessário -->
         <a 
           href="https://wa.me/5554999590944" 
           target="_blank" 
@@ -121,7 +123,7 @@
   </section>
 
   <!-- SEÇÃO REDES SOCIAIS -->
-  <section class="redes-sociais animate-on-scroll" id="redes-sociais">
+  <section class="redes-sociais fade-up" id="redes-sociais">
     <div class="container">
       <h2>Redes Sociais</h2>
       <p class="descricao">
