--- a/index.html
+++ b/index.html
@@ -1,107 +1,114 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dr. Vitor Panizzon Spanholo</title>
-  <!-- Fonte Google (Poppins) -->
+  <title>Promethya</title>
+  <!-- Google Font (Poppins) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link 
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" 
     rel="stylesheet"
   />
-  <!-- CSS Externo -->
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- HEADER (sticky) -->
+  <!-- HEADER -->
   <header class="header">
     <div class="container header-content">
-      <div class="logo">Dr. Vitor P. S.</div>
+      <div class="logo">Promethya</div>
       <nav>
         <ul>
-          <li><a href="#hero">Início</a></li>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#servicos">Serviços</a></li>
-          <li><a href="#contato">Contato</a></li>
-          <li><a href="#redes-sociais">Redes Sociais</a></li>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#socials">Socials</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- HERO -->
+  <!-- HERO SECTION -->
   <section class="hero fade-up" id="hero">
     <div class="container hero-content">
-      <h1 class="hero-title">Eleve Sua Saúde e Performance</h1>
+      <h1 class="hero-title">Innovation Meets Transformation</h1>
       <p class="hero-subtitle">
-        Emagrecimento • Terapia de Reposição Hormonal • Otimização Esportiva
+        Welcome to <strong>Promethya</strong>, the groundbreaking brand founded by
+        Dr. Vitor Panizzon Spanholo. Inspired by the spirit of Prometheus,
+        we ignite possibility, growth, and empowerment for individuals seeking
+        transformative health solutions.
       </p>
-      <a href="#contato" class="btn-primary hero-cta">Agendar Consulta</a>
+      <a href="#contact" class="btn-primary hero-cta">Get in Touch</a>
     </div>
   </section>
 
-  <!-- SEÇÃO SOBRE -->
-  <section class="sobre fade-left" id="sobre">
-    <div class="container sobre-flex">
-      <div class="sobre-text">
-        <h2>Sobre Mim</h2>
-        <p class="descricao">
-          Sou médico especializado em protocolos avançados de emagrecimento, 
-          terapia de reposição hormonal e melhora esportiva. Minha abordagem é 
-          altamente personalizada, fundamentada em evidências científicas 
-          e nas melhores práticas clínicas.
+  <!-- ABOUT SECTION -->
+  <section class="about fade-left" id="about">
+    <div class="container about-flex">
+      <div class="about-text">
+        <h2>About Promethya</h2>
+        <p class="description">
+          Promethya is a visionary initiative blending innovation, enlightenment,
+          and adaptability. Founded by Dr. Vitor Panizzon Spanholo, our mission
+          is to create cutting-edge solutions in health, performance, and well-being,
+          forged through a relentless commitment to craftsmanship and creativity.
         </p>
-        <p class="descricao">
-          Em constante evolução, estou em preparação para o 
-          <strong>USMLE</strong>, reforçando meu compromisso com a excelência 
-          na prática médica e com resultados reais para meus pacientes.
+        <p class="description">
+          Like Prometheus bringing fire to humanity, Promethya sparks new possibilities
+          for individuals worldwide. We’re here to empower your journey—whether through
+          personalized services, advanced products, or transformative insights.
         </p>
       </div>
+      <!-- (Optional) Add an image or keep it minimal
+      <div class="about-img">
+        <img src="images/about.jpg" alt="Promethya Founder" />
+      </div>
+      -->
     </div>
   </section>
 
-  <!-- SEÇÃO SERVIÇOS -->
-  <section class="servicos fade-right" id="servicos">
+  <!-- SERVICES SECTION -->
+  <section class="services fade-right" id="services">
     <div class="container">
-      <h2>Serviços</h2>
+      <h2>Our Services</h2>
       <div class="cards">
         <div class="card">
-          <h3>Emagrecimento</h3>
+          <h3>Transformative Health</h3>
           <p>
-            Acompanhamento clínico para perda de peso saudável e sustentada, 
-            unindo nutrição, exercícios e suporte médico contínuo.
+            Personalized approaches to wellness and performance, leveraging
+            advanced methodologies and deep medical expertise.
           </p>
         </div>
         <div class="card">
-          <h3>Terapia de Reposição Hormonal</h3>
+          <h3>Adaptive Solutions</h3>
           <p>
-            Protocolos individualizados para equilibrar níveis hormonais, 
-            melhorar vitalidade e bem-estar de forma segura.
+            Crafting flexible programs and tools to match your evolving goals—
+            from weight management to athletic optimization.
           </p>
         </div>
         <div class="card">
-          <h3>Performance Esportiva</h3>
+          <h3>Innovation & Research</h3>
           <p>
-            Orientação médica para atletas ou entusiastas que buscam 
-            otimizar desempenho, prevenir lesões e maximizar resultados.
+            Ongoing development of pioneering products and protocols,
+            continually pushing the boundaries of what’s possible.
           </p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- SEÇÃO CONTATO -->
-  <section class="contato fade-up" id="contato">
+  <!-- CONTACT SECTION -->
+  <section class="contact fade-up" id="contact">
     <div class="container">
-      <h2>Contato</h2>
-      <p class="descricao">
-        Agende sua consulta ou tire dúvidas diretamente comigo:
+      <h2>Contact Promethya</h2>
+      <p class="description">
+        Ready to ignite your transformation? Reach out and let’s begin.
       </p>
       <div class="contact-links">
-        <!-- Ajuste seu número de WhatsApp se necessário -->
         <a 
           href="https://wa.me/5554999590944" 
           target="_blank" 
@@ -122,12 +129,12 @@
     </div>
   </section>
 
-  <!-- SEÇÃO REDES SOCIAIS -->
-  <section class="redes-sociais fade-up" id="redes-sociais">
+  <!-- SOCIALS SECTION -->
+  <section class="socials fade-up" id="socials">
     <div class="container">
-      <h2>Redes Sociais</h2>
-      <p class="descricao">
-        Acompanhe conteúdos exclusivos, dicas de saúde e muito mais:
+      <h2>Connect with Promethya</h2>
+      <p class="description">
+        Follow us for exclusive insights, success stories, and the latest from Dr. Vitor Panizzon Spanholo.
       </p>
       <div class="social-links">
         <a 
@@ -150,12 +157,12 @@
     </div>
   </section>
 
-  <!-- RODAPÉ -->
+  <!-- FOOTER -->
   <footer>
-    <p>&copy; 2025 Dr. Vitor Panizzon Spanholo. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Promethya. All rights reserved. Founded by Dr. Vitor Panizzon Spanholo.</p>
   </footer>
 
-  <!-- SCRIPT DE ANIMAÇÃO -->
+  <!-- SCRIPT -->
   <script src="script.js"></script>
 </body>
 </html>
