--- a/index.html
+++ b/index.html
@@ -1,112 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Promethya</title>
-  <!-- Google Font (Poppins) -->
+  <!-- Fonte Google (Poppins) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link 
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" 
     rel="stylesheet"
   />
-  <!-- CSS -->
+  <!-- CSS Externo -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- HEADER -->
+  <!-- CABEÇALHO -->
   <header class="header">
     <div class="container header-content">
       <div class="logo">Promethya</div>
       <nav>
         <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="#socials">Socials</a></li>
+          <li><a href="#inicio">Início</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#contato">Contato</a></li>
+          <li><a href="#redes-sociais">Redes Sociais</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- HERO SECTION -->
-  <section class="hero fade-up" id="hero">
+  <!-- SEÇÃO INÍCIO -->
+  <section class="hero fade-up" id="inicio">
     <div class="container hero-content">
-      <h1 class="hero-title">Innovation Meets Transformation</h1>
+      <h1 class="hero-title">Inovação para a Sua Transformação</h1>
       <p class="hero-subtitle">
-        Welcome to <strong>Promethya</strong>, the groundbreaking brand founded by
-        Dr. Vitor Panizzon Spanholo. Inspired by the spirit of Prometheus,
-        we ignite possibility, growth, and empowerment for individuals seeking
-        transformative health solutions.
+        Bem-vindo(a) à <strong>Promethya</strong>, iniciativa  fundada pelo
+        <strong>Dr. Vitor Panizzon Spanholo</strong>. Inspirada no espírito de Prometeu,
+        ofereço soluções transformadoras em <strong>emagrecimento</strong>, <strong>reposição hormonal</strong> e
+        <strong>otimização de performance esportiva</strong>.
       </p>
-      <a href="#contact" class="btn-primary hero-cta">Get in Touch</a>
+      <a href="#contato" class="btn-primary hero-cta">Fale Comigo</a>
     </div>
   </section>
 
-  <!-- ABOUT SECTION -->
-  <section class="about fade-left" id="about">
+  <!-- SEÇÃO SOBRE -->
+  <section class="about fade-left" id="sobre">
     <div class="container about-flex">
       <div class="about-text">
-        <h2>About Promethya</h2>
+        <h2>Sobre a Promethya</h2>
         <p class="description">
-          Promethya is a visionary initiative blending innovation, enlightenment,
-          and adaptability. Founded by Dr. Vitor Panizzon Spanholo, our mission
-          is to create cutting-edge solutions in health, performance, and well-being,
-          forged through a relentless commitment to craftsmanship and creativity.
+          Olá! Sou o <strong>Dr. Vitor Panizzon Spanholo</strong> e atuo de forma individual na Promethya,
+          uma marca que une inovação, conhecimento científico e paixão pela saúde. 
+          Assim como Prometeu trouxe o fogo à humanidade, trago as perspectivas
+          e abordagens para que eu possa transformar seu corpo.
         </p>
         <p class="description">
-          Like Prometheus bringing fire to humanity, Promethya sparks new possibilities
-          for individuals worldwide. We’re here to empower your journey—whether through
-          personalized services, advanced products, or transformative insights.
+          Meu objetivo é ajudar cada pessoa a conquistar resultados reais e duradouros,
+          sempre embasado nas melhores práticas médicas e em uma visão personalizada
+          de saúde e bem-estar.
         </p>
       </div>
-      <!-- (Optional) Add an image or keep it minimal
+      <!-- (Opcional) Espaço para imagem futura
       <div class="about-img">
-        <img src="images/about.jpg" alt="Promethya Founder" />
+        <img src="images/sobre.jpg" alt="Dr. Vitor Panizzon Spanholo" />
       </div>
       -->
     </div>
   </section>
 
-  <!-- SERVICES SECTION -->
-  <section class="services fade-right" id="services">
+  <!-- SEÇÃO SERVIÇOS -->
+  <section class="services fade-right" id="servicos">
     <div class="container">
-      <h2>Our Services</h2>
+      <h2>Serviços</h2>
       <div class="cards">
         <div class="card">
-          <h3>Transformative Health</h3>
+          <h3>Emagrecimento</h3>
           <p>
-            Personalized approaches to wellness and performance, leveraging
-            advanced methodologies and deep medical expertise.
+            Abordagem clínica e individualizada para perda de peso saudável e duradoura,
+            aliando nutrição, exercício e acompanhamento médico contínuo.
           </p>
         </div>
         <div class="card">
-          <h3>Adaptive Solutions</h3>
+          <h3>Reposição Hormonal</h3>
           <p>
-            Crafting flexible programs and tools to match your evolving goals—
-            from weight management to athletic optimization.
+            Protocolos personalizados para equilibrar níveis hormonais, 
+            melhorar energia, vitalidade e bem-estar de forma segura e eficaz.
           </p>
         </div>
         <div class="card">
-          <h3>Innovation & Research</h3>
+          <h3>Otimização Esportiva</h3>
           <p>
-            Ongoing development of pioneering products and protocols,
-            continually pushing the boundaries of what’s possible.
+            Orientação médica para atletas e entusiastas que buscam aprimorar 
+            desempenho físico, prevenir lesões e maximizar resultados.
           </p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- CONTACT SECTION -->
-  <section class="contact fade-up" id="contact">
+  <!-- SEÇÃO CONTATO -->
+  <section class="contact fade-up" id="contato">
     <div class="container">
-      <h2>Contact Promethya</h2>
+      <h2>Contato</h2>
       <p class="description">
-        Ready to ignite your transformation? Reach out and let’s begin.
+        Quer agendar uma consulta ou saber mais sobre como posso te ajudar?
+        Entre em contato agora mesmo.
       </p>
       <div class="contact-links">
         <a 
@@ -129,12 +130,12 @@
     </div>
   </section>
 
-  <!-- SOCIALS SECTION -->
-  <section class="socials fade-up" id="socials">
+  <!-- SEÇÃO REDES SOCIAIS -->
+  <section class="socials fade-up" id="redes-sociais">
     <div class="container">
-      <h2>Connect with Promethya</h2>
+      <h2>Redes Sociais</h2>
       <p class="description">
-        Follow us for exclusive insights, success stories, and the latest from Dr. Vitor Panizzon Spanholo.
+        Acompanhe conteúdos exclusivos, dicas de saúde e muito mais:
       </p>
       <div class="social-links">
         <a 
@@ -157,12 +158,12 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
+  <!-- RODAPÉ -->
   <footer>
-    <p>&copy; 2025 Promethya. All rights reserved. Founded by Dr. Vitor Panizzon Spanholo.</p>
+    <p>&copy; 2025 Promethya. Todos os direitos reservados. Fundada pelo Dr. Vitor Panizzon Spanholo.</p>
   </footer>
 
-  <!-- SCRIPT -->
+  <!-- SCRIPT DE ANIMAÇÃO -->
   <script src="script.js"></script>
 </body>
 </html>
