--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
       <div class="container">
         <h2 class="section-title">Dr. Vitor Panizzon Spanholo</h2>
         <p class="section-text">
-          Fundador da Promethya, trago uma abordagem revolucionária em saúde e performance humana. 
-          Combinando conhecimento médico avançado com tecnologia de ponta, ofereço soluções 
-          personalizadas para transformação física e mental.
+          Bem-vindo(a) à <strong>Promethya</strong>, iniciativa fundada pelo
+          <strong>Dr. Vitor Panizzon Spanholo</strong>. Inspirada ao mito de Prometheus, o qual
+          entregou à humanidade o dom da sabedoria que transformou seu destino, ofereço soluções transformadoras 
+          em <strong>emagrecimento</strong>, <strong>reposição hormonal</strong> e <strong>otimização esportiva</strong>.
         </p>
       </div>
     </section>
@@ -82,8 +83,8 @@
           <h2 class="section-title">Transforme Sua Vida</h2>
           <p class="section-text">Agende sua consulta para uma abordagem personalizada</p>
           <div class="contact-buttons">
-            <a href="https://wa.me/5554999590944" class="button">
-              <span>Agendar por WhatsApp</span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe8mCkdM9NG7rVkA3oZacVcQiLRofX2OJqmzXp4WLhojd-UqQ/viewform?usp=header" class="button">
+              <span>Agendar</span>
             </a>
             <a href="mailto:vitorpanizzon@gmail.com" class="button">
               <span>Enviar E-mail</span>
