--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
       <div class="container">
         <h2 class="section-title">Dr. Vitor Panizzon Spanholo</h2>
         <p class="section-text">
-          Bem-vindo(a) à <strong>Promethya</strong>, iniciativa fundada pelo
-          <strong>Dr. Vitor Panizzon Spanholo</strong>. Inspirada ao mito de Prometheus, o qual
-          entregou à humanidade o dom da sabedoria que transformou seu destino, ofereço soluções transformadoras 
-          em <strong>emagrecimento</strong>, <strong>reposição hormonal</strong> e <strong>otimização esportiva</strong>.
+          Fundador da Promethya, trago uma abordagem revolucionária em saúde e performance humana. 
+          Combinando conhecimento médico avançado com tecnologia de ponta, ofereço soluções 
+          personalizadas para transformação física e mental.
         </p>
       </div>
     </section>
@@ -83,8 +82,8 @@
           <h2 class="section-title">Transforme Sua Vida</h2>
           <p class="section-text">Agende sua consulta para uma abordagem personalizada</p>
           <div class="contact-buttons">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe8mCkdM9NG7rVkA3oZacVcQiLRofX2OJqmzXp4WLhojd-UqQ/viewform?usp=header" class="button">
-              <span>Agendar</span>
+            <a href="https://wa.me/5554999590944" class="button">
+              <span>Agendar por WhatsApp</span>
             </a>
             <a href="mailto:vitorpanizzon@gmail.com" class="button">
               <span>Enviar E-mail</span>
@@ -98,6 +97,7 @@
     <section class="social-section" id="redes">
       <div class="container">
         <div class="social-content">
+          <h2 class="social-title">Conecte-se</h2>
           <div class="social-links">
             <a href="https://youtube.com/@vitorpzsp" class="social-link">
               <span>YouTube</span>
