--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <section class="hero" id="inicio">
       <div class="hero-content">
         <h1 class="hero-title">
-          <span class="gradient-text">Inovação</span> para<br>
-          Sua Transformação
+          Aperte o <span class="gradient-text">Start</span><br>
+          da Sua Transformação
         </h1>
         <div class="scroll-indicator"></div>
       </div>
@@ -97,7 +97,7 @@
     <section class="social-section" id="redes">
       <div class="container">
         <div class="social-content">
-          <h2 class="social-title">Conecte-se</h2>
+          <h2 class="social-title"></h2>
           <div class="social-links">
             <a href="https://youtube.com/@vitorpzsp" class="social-link">
               <span>YouTube</span>
