--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <div class="container">
         <h2 class="section-title">Dr. Vitor Panizzon Spanholo</h2>
         <p class="section-text">
-          Bem-vindo(a) à <strong>Promethya</strong>, iniciativa fundada pelo<strong>Dr. Vitor Panizzon Spanholo</strong>. 
-          Inspirada ao mito de Prometheus, o qual entregou à humanidade o dom da sabedoria que transformou seu destino, 
+          Iniciativa fundada pelo <strong>Dr. Vitor Panizzon Spanholo</strong>. A Promethya é 
+          inspirada no mito de Prometheus, o qual entregou à humanidade o dom da sabedoria que transformou seu destino, 
           ofereço soluções transformadoras em <strong>emagrecimento</strong>, <strong>reposição hormonal</strong> 
           e <strong>otimização esportiva</strong>.
         </p>
