--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <h2 class="section-title">Dr. Vitor Panizzon Spanholo</h2>
         <p class="section-text">
           Iniciativa fundada pelo <strong>Dr. Vitor Panizzon Spanholo</strong>. A Promethya é 
-          inspirada no mito de Prometheus, o qual entregou à humanidade o dom da sabedoria que transformou seu destino, 
-          ofereço soluções transformadoras em <strong>emagrecimento</strong>, <strong>reposição hormonal</strong> 
-          e <strong>otimização esportiva</strong>.
+          inspirada no mito de Prometheus, o qual entregou à humanidade o dom da sabedoria que transformou seu destino. 
+          Oferecendo soluções em <strong>emagrecimento</strong>, <strong>reposição hormonal</strong> 
+          e <strong>otimização esportiva</strong>, meu ideal é trazer a mudança que você procura.
         </p>
       </div>
     </section>
